Fixed home page gap between elements

--- a/components/HomeComps/HeroText/HeroText.module.css
+++ b/components/HomeComps/HeroText/HeroText.module.css
@@ -77,7 +77,9 @@
 @media (max-width: 987px) {
   .mern {
     width: 100%;
-    margin-bottom: 15vh;
+    /* margin-bottom: 15vh;
+    margin-bottom: 2.5vh; */
+    margin-bottom: 0;
     font-size: 3.5em;
     text-align: center;
     letter-spacing: 2.5px;
